--- a/src/styles.scss
+++ b/src/styles.scss
@@ -54,7 +54,6 @@ ngb-datepicker.rtl {
   .info-tooltip {
     display: inline-block;
     overflow: hidden;
-    height: 1.575em;
     transition: all .35s ease-in-out;
 
     /*
